CodeTriggerExtBaru/incl/Wd-dask64.h


//DASK Data Types
typedef unsigned char   U8;

typedef short           I16;

typedef unsigned short  U16;

typedef long            I32;

typedef unsigned long   U32;

typedef float           F32;

typedef double          F64;

//device enum struct
typedef struct
{
U16 wModuleType;
U16 wCardID;
U16 geo_addr;
U16 Reserved;
char dispname[64];
} WD_DEVICE, *PWD_DEVICE;
 

/*------------------------------------------------------------------
** PCIS-DASK Function prototype
------------------------------------------------------------------*/
I16 __stdcall WD_Register_Card (U16 CardType, U16 card_num);

I16 __stdcall WD_Register_Card_By_PXISlot_GA (U16 CardType, U16 ga);

I16 __stdcall WD_Get_SDRAMSize  (U16 CardNumber, U32 *sdramsize);

I16 __stdcall WD_SoftTriggerGen(U16 wCardNumber, U8 op);

I16 __stdcall WD_Release_Card  (U16 CardNumber);

I16 __stdcall WD_GetActualRate(U16 wCardNumber, BOOLEAN fdir, F64 Rate, U32* interval, F64 *ActualRate);

I16 __stdcall WD_GetPXIGeographAddr (U16 wCardNumber, U8* geo_addr);

I16 __stdcall WD_GetBaseAddr(U16 wCardNumber, U32 *BaseAddr, U32 *BaseAddr2);

void * __stdcall WD_Buffer_Alloc (U16 wCardNumber, U32 dwSize);

BOOL __stdcall WD_Buffer_Free (U16 wCardNumber, void *buf);

I16 __stdcall WD_Device_Scan(WD_DEVICE* AvailModules, U16 ncount, U16* retcnt);
 
I16 __stdcall WD_GetFPGAVersion(USHORT wCardNumber, U32* version);

/*---------------------------------------------------------------------------*/
I16 __stdcall WD_AI_Config (U16 wCardNumber, U16 TimeBase, BOOLEAN adDutyRestore, U16 ConvSrc, BOOLEAN doubleEdged, BOOLEAN AutoResetBuf);

I16 __stdcall WD_AI_Trig_Config (U16 wCardNumber, U16 trigMode, U16 trigSrc, U16 trigPol, U16 anaTrigchan, F64 anaTriglevel, U32 postTrigScans, U32 preTrigScans, U32 trigDelayTicks, U32 reTrgCnt);

I16 __stdcall WD_OutTrig_Config (U16 wCardNumber, U16 trig_Ch, U16 trig_conf, U16 trig_width);

I16 __stdcall WD_AI_Set_Mode (U16 wCardNumber, U16 modeCtrl, U16 wIter);

I16 __stdcall WD_AI_CH_Config (U16 wCardNumber, U16 wChannel, U16 wAdRange);

I16 __stdcall WD_AI_CH_ChangeParam (U16 wCardNumber, U16 wChannel, U16 wParam, U16 wValue);

I16 __stdcall WD_AI_InitialMemoryAllocated (U16 CardNumber, U32 *MemSize);

I16 __stdcall WD_AI_VoltScale (U16 CardNumber, U16 AdRange, I16 reading, F64 *voltage);

I16 __stdcall WD_AI_VoltScale32 (U16 CardNumber, U16 AdRange, I32 reading, F64 *voltage);

I16 __stdcall WD_AI_ContReadChannel (U16 CardNumber, U16 Channel,
               U16 BufId, U32 ReadScans, U32 ScanIntrv, U32 SampIntrv, U16 SyncMode);

I16 __stdcall WD_AI_ContReadMultiChannels (U16 CardNumber, U16 NumChans, U16 *Chans,
               U16 BufId, U32 ReadScans, U32 ScanIntrv, U32 SampIntrv, U16 SyncMode);

I16 __stdcall WD_AI_ContScanChannels (U16 CardNumber, U16 Channel,
               U16 BufId, U32 ReadScans, U32 ScanIntrv, U32 SampIntrv, U16 SyncMode);

I16 __stdcall WD_AI_ContReadChannelToFile (U16 CardNumber, U16 Channel, U16 BufId,
               U8 *FileName, U32 ReadScans, U32 ScanIntrv, U32 SampIntrv, U16 SyncMode);

I16 __stdcall WD_AI_ContReadMultiChannelsToFile (U16 CardNumber, U16 NumChans, U16 *Chans,
               U16 BufId, U8 *FileName, U32 ReadScans, U32 ScanIntrv, U32 SampIntrv, U16 SyncMode);

I16 __stdcall WD_AI_ContScanChannelsToFile (U16 CardNumber, U16 Channel, U16 BufId,
               U8 *FileName, U32 ReadScans, U32 ScanIntrv, U32 SampIntrv, U16 SyncMode);

I16 __stdcall WD_AI_ContStatus (U16 CardNumber, U32 *Status);

I16 __stdcall WD_AI_ContVScale (U16 wCardNumber, U16 adRange, void *readingArray, F64 *voltageArray, I32 count);

I16 __stdcall WD_AI_AsyncCheck (U16 CardNumber, BOOLEAN *Stopped, U32 *AccessCnt);

I16 __stdcall WD_AI_AsyncClear (U16 CardNumber, U32 *StartPos, U32 *AccessCnt);

I16 __stdcall WD_AI_AsyncClearEx (U16 CardNumber, U32 *StartPos, U32 *AccessCnt, U32 NoWait);

I16 __stdcall WD_AI_AsyncDblBufferHalfReady (U16 CardNumber, BOOLEAN *HalfReady, BOOLEAN *StopFlag);

I16 __stdcall WD_AI_AsyncDblBufferMode (U16 CardNumber, BOOLEAN Enable);

I16 __stdcall WD_AI_AsyncDblBufferToFile (U16 CardNumber);

I16 __stdcall WD_AI_ContBufferSetup (U16 wCardNumber, void *pwBuffer, U32 dwReadCount, U16 *BufferId);

I16 __stdcall WD_AI_ContBufferReset (U16 wCardNumber);

I16 __stdcall WD_AI_DMA_Transfer (U16 wCardNumber, U16 BufId);

I16 __stdcall WD_AI_ConvertCheck (U16 wCardNumber, BOOLEAN *bStopped);

I16 __stdcall WD_AI_AsyncReStartNextReady (U16 wCardNumber, BOOLEAN *bReady, BOOLEAN *StopFlag, U16 *RdyDaqCnt);

I16 __stdcall WD_AI_DMA_TransferBySize (U16 wCardNumber, F32 timeLimit,  U16 BufId, U32 dwReadCount, U32 *numRead, U32 *dataNotTransferred, U8 *complete);

I16 __stdcall WD_AI_ContBufferLock (U16 wCardNumber, void *pwBuffer, U32 dwReadCount, U16 *BufferId);

I16 __stdcall WD_AI_SetTimeout (U16 wCardNumber, U32 msec);


I16 __stdcall WD_AI_AsyncDblBufferOverrun (U16 wCardNumber, U16 op, U16 *overrunFlag);

I16 __stdcall WD_AI_AsyncDblBufferHandled (U16 wCardNumber);

I16 __stdcall WD_AI_AsyncReTrigNextReady (U16 wCardNumber, BOOLEAN *bReady, BOOLEAN *StopFlag, U32 *RdyTrigCnt);

/*---------------------------------------------------------------------------*/
//SSI
I16 __stdcall WD_SSI_SourceConn (U16 wCardNumber, U16 sigCode);

I16 __stdcall WD_SSI_SourceDisConn (U16 wCardNumber, U16 sigCode);

I16 __stdcall WD_SSI_SourceClear (U16 wCardNumber);

I16 __stdcall WD_Route_Signal (U16 wCardNumber, U16 signal, U16 Line, U16 dir);

I16 __stdcall WD_Signal_DisConn (U16 wCardNumber, U16 signal, U16 Line);

/*---------------------------------------------------------------------------*/
//calibration
I16 __stdcall WD_AD_Auto_Calibration_ALL(U16 wCardNumber);

I16 __stdcall WD_EEPROM_CAL_Constant_Update(U16 wCardNumber, U16 bank);

I16 __stdcall WD_Load_CAL_Data(U16 wCardNumber, U16 bank);

I16 __stdcall WD_Get_Default_Load_Area (U16 wCardNumber);

I16 __stdcall WD_Set_Default_Load_Area(U16 wCardNumber, U16 bank);

/*---------------------------------------------------------------------------*/
//DIO
I16 __stdcall WD_DI_ReadLine (U16 CardNumber, U16 Port, U16 Line, U16 *State);

I16 __stdcall WD_DI_ReadPort (U16 CardNumber, U16 Port, U32 *Value);

/*---------------------------------------------------------------------------*/
I16 __stdcall WD_DO_WriteLine (U16 CardNumber, U16 Port, U16 Line, U16 Value);

I16 __stdcall WD_DO_WritePort (U16 CardNumber, U16 Port, U32 Value);

I16 __stdcall WD_DO_ReadLine (U16 CardNumber, U16 Port, U16 Line, U16 *Value);

I16 __stdcall WD_DO_ReadPort (U16 CardNumber, U16 Port, U32 *Value);

/*---------------------------------------------------------------------------*/
I16 __stdcall WD_DIO_PortConfig (U16 CardNumber, U16 Port, U16 mode, U16 Direction);

I16 __stdcall WD_DIO_LineConfig (U16 CardNumber, U16 Port, U32 Line, U16 Direction);

I16 __stdcall WD_DIO_LinesConfig (U16 CardNumber, U16 Port, U16 mode, U32 Linesdirmap);