CodeTriggerExtBaru/incl/Wd-dask.pas


(****************************************************************************)
(*          WD-DASK Functions Declarations                                *)
(****************************************************************************)
function WD_Register_Card (CardType:Word; card_num:Word):Smallint;stdcall;
function WD_Register_Card_By_PXISlot_GA (CardType:Word; geo_addr:Word):Smallint;stdcall;
function WD_Release_Card  (CardNumber:Word):Smallint;stdcall;
function WD_Get_SDRAMSize  (CardNumber:Word; var MemSize:Cardinal):Smallint;stdcall;
function WD_SoftTriggerGen (CardNumber:Word; Stopped:Byte):Smallint;stdcall;
function WD_GetActualRate  (CardNumber:word; fdir:Byte; SampleRate:Double; var interval:Cardinal; var ActualRate:Double):Smallint;stdcall;
function WD_GetBaseAddr    (CardNumber:Word; var BaseAddr:Cardinal; var BaseAddr2:Cardinal):Smallint;stdcall;
function WD_GetPXIGeographAddr  (CardNumber:word; var geo_addr:Byte):Smallint;stdcall;
function WD_Buffer_Alloc  (CardNumber:Word; dwSize:Cardinal):Pointer;stdcall;
function WD_Buffer_Free  (CardNumber:word; BufferAddr:Pointer):BOOL;stdcall;
function WD_Device_Scan  (var AvailModules:WD_DEVICE; ncount:Word; var retcnt:Wprd):Smallint;stdcall;
function WD_GetFPGAVersion (CardNumber:Word; var version:Cardinal):Smallint;stdcall;
(*---------------------------------------------------------------------------*)
function WD_AI_Config (CardNumber:Word; TimeBase:Word; adDutyRestore:Byte; ConvSrc:Word; doubleEdged:Byte; AutoResetBuf:Byte):Smallint;stdcall;
function WD_AI_Trig_Config (CardNumber:Word; trigMode:Word; trigSrc:Word; trigPol:Word; anaTrigchan:Word; anaTriglevel:Double; postTrigScans:Cardinal; preTrigScans:Cardinal; trigDelayTicks:Cardinal; ReTrgCnt:Cardinal):Smallint;stdcall;
function WD_OutTrig_Config (CardNumber:Word; trig_Ch:Word; trig_conf:Word; trig_width:Word):Smallint;stdcall;
function WD_AI_CH_Config (CardNumber:Word; Channel:Word; AdRange:Word):Smallint;stdcall;
function WD_AI_CH_ChangeParam (CardNumber:Word; Channel:Word; wParam:Word; wValue:Word):Smallint;stdcall;
function WD_AI_Set_Mode (CardNumber:Word; modeCtrl:Word; wIter:Word):Smallint;stdcall;
function WD_AI_InitialMemoryAllocated (CardNumber:Word; var MemSize:Cardinal):Smallint;stdcall;
function WD_AI_VoltScale (CardNumber:Word; AdRange:Word; reading:Smallint; var voltage:Double):Smallint;stdcall;
function WD_AI_VoltScale32 (CardNumber:Word; AdRange:Word; reading:Longint; var voltage:Double):Smallint;stdcall;
function WD_AI_ContReadChannel (CardNumber:Word; Channel:Word; BufId:Word; ReadScans:Cardinal; ScanIntrv:Cardinal; SampIntrv:Cardinal; SyncMode:Word):Smallint;stdcall;
function WD_AI_ContReadMultiChannels (CardNumber:Word; NumChans:Word; var Chans:Word; BufId:Word; ReadScans:Cardinal;
               ScanIntrv:Cardinal; SampIntrv:Cardinal; SyncMode:Word):Smallint;stdcall;
function WD_AI_ContScanChannels (CardNumber:Word; Channel:Word; BufId:Word; ReadScans:Cardinal; ScanIntrv:Cardinal; SampIntrv:Cardinal; SyncMode:Word):Smallint;stdcall;
function WD_AI_ContReadChannelToFile (CardNumber:Word; Channel:Word; BufId:Word; var FileName:Char; ReadScans:Cardinal;
			   ScanIntrv:Cardinal; SampIntrv:Cardinal; SyncMode:Word):Smallint;stdcall;
function WD_AI_ContReadMultiChannelsToFile (CardNumber:Word; NumChans:Word; var Chans:Word;
               BufId:Word; var FileName:Byte; ReadScans:Cardinal;
               ScanIntrv:Cardinal; SampIntrv:Cardinal; SyncMode:Word):Smallint;stdcall;
function WD_AI_ContScanChannelsToFile (CardNumber:Word; Channel:Word; BufId:Word;
               var FileName:Char; ReadScans:Cardinal; ScanIntrv:Cardinal; SampIntrv:Cardinal; SyncMode:Word):Smallint;stdcall;
function WD_AI_ContVScale (CardNumber:Word; AdRange:Word; var readingArray:Word; var voltageArray:Double; count:Longint):Smallint;stdcall;
function WD_AI_ContStatus (CardNumber:Word; var Status:Cardinal):Smallint;stdcall;
function WD_AI_AsyncCheck (CardNumber:Word; var Stopped:Byte; var AccessCnt:Cardinal):Smallint;stdcall;
function WD_AI_AsyncClear (CardNumber:Word; var StartPos:Cardinal; var AccessCnt:Cardinal):Smallint;stdcall;
function WD_AI_AsyncClearEx (CardNumber:Word; var StartPos:Cardinal; var AccessCnt:Cardinal;NoWait:Cardinal):Smallint;stdcall;
function WD_AI_AsyncDblBufferHalfReady (CardNumber:Word; var HalfReady:Byte; var StopFlag:Byte):Smallint;stdcall;
function WD_AI_AsyncDblBufferMode (CardNumber:Word; Enable:Byte):Smallint;stdcall;
function WD_AI_AsyncDblBufferToFile (CardNumber:Word):Smallint;stdcall;
function WD_AI_ContBufferSetup (CardNumber:Word; var Buffer:array of smallint; ReadCount:Cardinal; var BufferId:Word):Smallint;stdcall;
function WD_AI_ContBufferReset (CardNumber:Word):Smallint;stdcall;
function WD_AI_ConvertCheck (CardNumber:Word; var Stopped:Byte):Smallint;stdcall;
function WD_AI_DMA_Transfer (CardNumber:Word):Smallint;stdcall;
function WD_AI_AsyncReStartNextReady (CardNumber:Word; var DaqReady:Byte; var StopFlag:Byte; var RdyDaqCnt:Word):Smallint;stdcall;
function WD_AI_EventCallBack (CardNumber:Word; mode:Smallint; EventType:Smallint; callbackAddr:Cardinal):Smallint;stdcall;
function WD_AI_GetEvent(CardNumber:Word; var hEvent:Cardinal):Smallint;stdcall;
function WD_AI_ContBufferLock (CardNumber:Word; var Buffer:Cardinal; ReadCount:Cardinal; var BufferId:Word):Smallint;stdcall;
function WD_AI_DMA_TransferBySize (CardNumber:Word; timeLimit:Single; BufId:Word; ReadCount:Cardinal; var numRead:Cardinal; var dataNotTransferred:Cardinal; var complete:Byte):Smallint;stdcall;
function WD_AI_SetTimeout (CardNumber:Word; msec:Cardinal):Smallint;stdcall;
function WD_AI_AsyncReTrigNextReady (CardNumber:Word; var trgReady:Byte; var StopFlag:Byte; var RdyTrigCnt:Cardinal):Smallint;stdcall;
function WD_AI_AsyncDblBufferHandled (CardNumber:Word):Smallint;stdcall;
function WD_AI_AsyncDblBufferOverrun (CardNumber:Word; op:Word; var overrunFlag:Word):Smallint;stdcall;
(*---------------------------------------------------------------------------*)
function WD_SSI_SourceConn (CardNumber:Word; sigCode:Word):Smallint;stdcall;
function WD_SSI_SourceDisConn (CardNumber:Word; sigCode:Word):Smallint;stdcall;
function WD_SSI_SourceClear (CardNumber:Word):Smallint;stdcall;
function WD_Route_Signal (CardNumber:Word; signal:Word; Line:Word; dir:Word):Smallint;stdcall;
function WD_Signal_DisConn (CardNumber:Word; signal:Word; Line:Word):Smallint;stdcall;
(*---------------------------------------------------------------------------*)
function WD_AD_Auto_Calibration_ALL(CardNumber:Word):Smallint;stdcall;
function WD_EEPROM_CAL_Constant_Update(CardNumber:Word; bank:Word):Smallint;stdcall;
function WD_Load_CAL_Data(CardNumber:Word; bank:Word):Smallint;stdcall;
function WD_Set_Default_Load_Area(CardNumber:Word; bank:Word):Smallint;stdcall;
function WD_Get_Default_Load_Area(CardNumber:Word):Smallint;stdcall;
(*---------------------------------------------------------------------------*)
function WD_DI_ReadLine (CardNumber:Word; Port:Word; Line:Word; var State:Word):Smallint;stdcall;
function WD_DI_ReadPort (CardNumber:Word; Port:Word; var Value:Cardinal):Smallint;stdcall;
(*---------------------------------------------------------------------------*)
function WD_DO_WriteLine (CardNumber:Word; Port:Word; Line:Word; Value:Word):Smallint;stdcall;
function WD_DO_WritePort (CardNumber:Word; Port:Word; Value:Cardinal):Smallint;stdcall;
function WD_DO_ReadLine (CardNumber:Word; Port:Word; Line:Word; var Value:Word):Smallint;stdcall;
function WD_DO_ReadPort (CardNumber:Word; Port:Word; var Value:Cardinal):Smallint;stdcall;
(*---------------------------------------------------------------------------*)
function WD_DIO_PortConfig (CardNumber:Word; Port:Word; Mode:Word; Direction:Word):Smallint;stdcall;
function WD_DIO_LineConfig (CardNumber:Word; Port:Word; Line:Cardinal; Direction:Word):Smallint;stdcall;
function WD_DIO_LinesConfig (CardNumber:Word; Port:Word; Mode:Word; wLinesdirmap:Cardinal):Smallint;stdcall;

implementation
